# FSQM

./: CMakeLists.txt  LICENSE  README.md
example/: qft_13.qasm  qft_20.qasm
example/exact/: 4gt11_84.qasm
example/fidelity/: BV5.qasm  ising.qasm
include/: QASMparser.h  QASMscanner.hpp  QASMtoken.hpp  circuit.h  mymeasure.h
output/: 4gt13_92.qasm  4mod5-v1_22.qasm  adr4_197.qasm  alu-v0_27.qasm  co14_215.qasm  cycle10_2_110.qasm  decod24-v2_43.qasm  hwb9_119.qasm  ising_model_10.qasm  ising_model_13.qasm  ising_model_16.qasm  misex1_241.qasm  mod5mils_65.qasm  qft_10.qasm  qft_13.qasm  qft_16.qasm  qft_20.qasm  radd_250.qasm  rd73_252.qasm  rd84_142.qasm  rd84_253.qasm  sqn_258.qasm  square_root_7.qasm  sym6_145.qasm  sym9_193.qasm  urf5_158.qasm  z4_268.qasm
reverse/: 4gt13_92.qasm  4mod5-v1_22.qasm  co14_215.qasm  decod24-v2_43.qasm  hwb9_119.qasm  ising_model_10.qasm  ising_model_13.qasm  ising_model_16.qasm  misex1_241.qasm  qft_10.qasm  qft_13.qasm  qft_16.qasm  qft_20.qasm  radd_250.qasm  rd73_252.qasm  rd84_142.qasm  rd84_253.qasm  root_255.qasm  sqn_258.qasm  square_root_7.qasm  sym6_145.qasm  sym9_193.qasm  urf5_158.qasm  z4_268.qasm
reverse/depth/: 4gt5_75.qasm  4mod5-bdd_287.qasm  adr4_197.qasm  alu-bdd_288.qasm  alu-v2_30.qasm  cm82a_208.qasm  cnt3-5_179.qasm  cycle10_2_110.qasm  dc1_220.qasm  majority_239.qasm  (+11 more)
src/: couplinggraph.cpp  graph.cpp  graphFunction.cpp  initial_mapping.cpp  main.cpp  mapping.cpp  mappingFunction.cpp  mappingPreparation.cpp  mymeasure.cpp  outputwriter.cpp  parser.cpp  print.cpp
tool/: gmon.out  qelib1.inc  run.py
(+42 files in other folders)
